# tinycardl

./: .gitignore  pyproject.toml
src/: main.py
