[tool.poetry]
name = "tinycardl"
version = "0.1.0"
description = "Download your cards"
authors = ["Baptiste Darthenay <baptiste.darthenay@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.14.1"
httpx-auth = "^0.5.0"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
bpython = "^0.19"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
